--- a/libraries/liblmdb/mdb_stat.1
+++ b/libraries/liblmdb/mdb_stat.1
@@ -13,7 +13,7 @@ mdb_stat \- LMDB environment status tool
 [\c
 .BR \-n ]
 [\c
-.BR \-r ]
+.BR \-r [ r ]]
 [\c
 .BR \-a \ |
 .BI \-s \ subdb\fR]
@@ -40,6 +40,9 @@ Shows the process ID, thread ID, and transaction ID for each active
 reader slot. The process ID and transaction ID are in decimal, the
 thread ID is in hexadecimal. The transaction ID is displayed as "-"
 if the reader does not currently have a read transaction open.
+If \fB\-rr\fP is given, check for stale entries in the reader
+table and clear them. The reader table will be printed again
+after the check is performed.
 .TP
 .BR \-a
 Display the status of all of the subdatabases in the environment.
