--- a/libraries/liblmdb/mdb_dump.1
+++ b/libraries/liblmdb/mdb_dump.1
@@ -43,9 +43,13 @@ names will be listed, no data will be output.
 Dump an LMDB database which does not use subdirectories.
 .TP
 .BR \-p
-If characters in either the key or data items are printing characters (as defined by isprint(3)), output them directly. This option permits users to use standard text editors and tools to modify the contents of databases.
+If characters in either the key or data items are printing characters (as
+defined by isprint(3)), output them directly. This option permits users to
+use standard text editors and tools to modify the contents of databases.
 
-Note: different systems may have different notions about what characters are considered printing characters, and databases dumped in this manner may be less portable to external systems. 
+Note: different systems may have different notions about what characters
+are considered printing characters, and databases dumped in this manner may
+be less portable to external systems. 
 .TP
 .BR \-a
 Dump all of the subdatabases in the environment.
@@ -57,9 +61,10 @@ Exit status is zero if no errors occur.
 Errors result in a non-zero exit status and
 a diagnostic message being written to standard error.
 
-Dumping and reloading databases that use user-defined comparison functions will result in new databases that use the
-default comparison functions. \fB In this case it is quite likely that the reloaded database will be damaged beyond
-repair permitting neither record storage nor retrieval.\fP
+Dumping and reloading databases that use user-defined comparison functions
+will result in new databases that use the default comparison functions.
+\fBIn this case it is quite likely that the reloaded database will be
+damaged beyond repair permitting neither record storage nor retrieval.\fP
 
 The only available workaround is to modify the source for the
 .BR mdb_load (1)
