Update LMDB version date/info

--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,5 +1,17 @@
 LMDB 0.9 Change Log
 
+LMDB 0.9.14 Engineering
+	Fix to support 64K page size (ITS#7713)
+	Fix cursor bug when deleting last node of a DUPSORT key
+	Fix mdb_env_info to return FIXEDMAP address
+	Fix mdb_copy copying past end of file (ITS#7886)
+	Fix cursor bugs from page_merge/rebalance
+	Fix to dirty fewer pages in deletes (mdb_page_loose()
+	Fix Windows compat issues in mtests (ITS#7879)
+	Add compacting variant of mdb_copy
+	Add BigEndian integer key compare code
+	Add mdb_dump/mdb_load utilities
+
 LMDB 0.9.13 Release (2014/06/18)
 	Fix mdb_page_alloc unlimited overflow page search
 	Documentation
