--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -4,6 +4,7 @@ LMDB 0.9.17 Release Engineering
 	Fix ITS#7377 catch calloc failure
 	Fix ITS#8237 regression from ITS#7589
 	Fix ITS#8221 MDB_PAGE_FULL on delete/rebalance
+	Fix ITS#8258 rebalance/split assert
 	Build
 		Create install dirs if needed (ITS#8256)
 
