--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -5,8 +5,12 @@ LMDB 0.9.17 Release Engineering
 	Fix ITS#8237 regression from ITS#7589
 	Fix ITS#8221 MDB_PAGE_FULL on delete/rebalance
 	Fix ITS#8258 rebalance/split assert
+	Fix ITS#8264 cursor_del cursor tracking
+	Fix ITS#8263 cursor_put cursor tracking
+	Fix ITS#7771 fakepage cursor tracking
 	Build
 		Create install dirs if needed (ITS#8256)
+		Fix ThreadProc decl on Win32/MSVC (ITS#8270)
 
 LMDB 0.9.16 Release (2015/08/14)
 	Fix cursor EOF bug (ITS#8190)
