--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -2,8 +2,12 @@ LMDB 0.9 Change Log
 
 LMDB 0.9.18 Release Engineering
 	Fix robust mutex detection on glibc 2.10-11 (ITS#8330)
+	Check for utf8_to_utf16 failures (ITS#7992)
+	Catch strdup failure in mdb_dbi_open
 	Build
 		Additional makefile var tweaks (ITS#8169)
+	Documentation
+		Add Getting Started page
 	
 
 LMDB 0.9.17 Release (2015/11/30)
