ITS#8355, doc update

--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -5,12 +5,14 @@ LMDB 0.9.18 Release Engineering
 	Fix page_search_root assert on FreeDB (ITS#8336)
 	Fix MDB_APPENDDUP vs. rewrite(single item) (ITS#8334)
 	Fix mdb_copy of large files on Windows
+	Fix subcursor move after delete (ITS#8355)
 	Check for utf8_to_utf16 failures (ITS#7992)
 	Catch strdup failure in mdb_dbi_open
 	Build
 		Additional makefile var tweaks (ITS#8169)
 	Documentation
 		Add Getting Started page
+		Update WRITEMAP description
 	
 
 LMDB 0.9.17 Release (2015/11/30)
