--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,6 @@
 LMDB 0.9 Change Log
 
-LMDB 0.9.18 Release Engineering
+LMDB 0.9.18 Release (2016/02/05)
 	Fix robust mutex detection on glibc 2.10-11 (ITS#8330)
 	Fix page_search_root assert on FreeDB (ITS#8336)
 	Fix MDB_APPENDDUP vs. rewrite(single item) (ITS#8334)
