--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,5 +1,12 @@
 LMDB 0.9 Change Log
 
+LMDB 0.9.19 Release Engineering
+    Tweak Win32 error message buffer
+    Fix MDB_GET_BOTH on non-dup record (ITS#8393)
+    Optimize mdb_drop
+    Fix xcursors after mdb_cursor_del (ITS#8406)
+    Fix MDB_NEXT_DUP after mdb_cursor_del (ITS#8412)
+
 LMDB 0.9.18 Release (2016/02/05)
 	Fix robust mutex detection on glibc 2.10-11 (ITS#8330)
 	Fix page_search_root assert on FreeDB (ITS#8336)
