--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,5 +1,8 @@
 LMDB 0.9 Change Log
 
+LMDB 0.9.20 Release Engineering
+	Fix mdb_load with escaped plaintext (ITS#8558)
+
 LMDB 0.9.19 Release (2016/12/28)
 	Fix mdb_env_cwalk cursor init (ITS#8424)
 	Fix robust mutexes on Solaris 10/11 (ITS#8339)
