--- a/libraries/liblmdb/mdb_dump.1
+++ b/libraries/liblmdb/mdb_dump.1
@@ -1,4 +1,4 @@
-.TH MDB_DUMP 1 "2015/09/30" "LMDB 0.9.17"
+.TH MDB_DUMP 1 "2017/07/31" "LMDB 0.9.90"
 .\" Copyright 2014-2017 Howard Chu, Symas Corp. All Rights Reserved.
 .\" Copying restrictions apply.  See COPYRIGHT/LICENSE.
 .SH NAME
@@ -13,6 +13,8 @@ mdb_dump \- LMDB environment export tool
 .BR \-l ]
 [\c
 .BR \-n ]
+[\c
+.BR \-v ]
 [\c
 .BR \-p ]
 [\c
@@ -41,6 +43,10 @@ names will be listed, no data will be output.
 .TP
 .BR \-n
 Dump an LMDB database which does not use subdirectories.
+.TP
+.BR \-v
+Use the previous environment state instead of the latest state.
+This may be useful if the latest state has been corrupted.
 .TP
 .BR \-p
 If characters in either the key or data items are printing characters (as
