--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -3,6 +3,7 @@ LMDB 0.9 Change Log
 LMDB 0.9.22 Engineering
 	Fix regression with new db from 0.9.19 (ITS#8760)
 	Fix liblmdb to build on Solaris (ITS#8612)
+	Fix delete behavior with DUPSORT DB (ITS#8622)
 
 LMDB 0.9.21 Release (2017/06/01)
 	Fix xcursor after cursor_del (ITS#8622)
