--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -5,6 +5,7 @@ LMDB 0.9.23 Engineering
 	ITS#8831 Fix mdb_load flag init
 	ITS#8844 Fix mdb_env_close in forked process
 	Documentation
+		ITS#8857 mdb_cursor_del doesn't invalidate cursor
 		ITS#8908 GET_MULTIPLE etc don't change passed in key
 
 LMDB 0.9.22 Release (2018/03/22)
