--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,6 @@
 LMDB 0.9 Change Log
 
-LMDB 0.9.24 Engineering
+LMDB 0.9.24 Release (2019/07/24)
 	ITS#8969 Tweak mdb_page_split
 	ITS#8975 WIN32 fix writemap set_mapsize crash
 	ITS#9007 Fix loose pages in WRITEMAP
