--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,7 @@
 LMDB 0.9 Change Log
 
 LMDB 0.9.26 Engineering
+	ITS#9278 fix robust mutex cleanup for FreeBSD
 
 LMDB 0.9.25 Release (2020/01/30)
 	ITS#9068 fix mdb_dump/load backslashes in printable content
