Return to engineering

--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,5 +1,7 @@
 LMDB 0.9 Change Log
 
+LMDB 0.9.27 Engineering
+
 LMDB 0.9.26 Release (2020/08/11)
 	ITS#9278 fix robust mutex cleanup for FreeBSD
 
