--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,7 @@
 LMDB 0.9 Change Log
 
 LMDB 0.9.28 Engineering
+	ITS#8662 add -a append option to mdb_load
 
 LMDB 0.9.27 Release (2020/10/26)
 	ITS#9376 fix repeated DUPSORT cursor deletes
