--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,6 @@
 LMDB 0.9 Change Log
 
-LMDB 0.9.28 Engineering
+LMDB 0.9.28 Release (2021/02/04)
 	ITS#8662 add -a append option to mdb_load
 
 LMDB 0.9.27 Release (2020/10/26)
