--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,6 @@
 LMDB 0.9 Change Log
 
-LMDB 0.9.31 Engineering
+LMDB 0.9.31 Release (2023/06/27)
 	ITS#8447 - Fix cursor_put(MDB_CURRENT) on DUPSORT DB with different sized data
 
 LMDB 0.9.30 Release (2023/02/08)
