--- a/libraries/liblmdb/CHANGES
+++ b/libraries/liblmdb/CHANGES
@@ -1,6 +1,7 @@
 LMDB 0.9 Change Log
 
 LMDB 0.9.32 Engineering
+	ITS#10095 - partial revert of ITS#9278. The patch was incorrect and introduced numerous race conditions.
 
 LMDB 0.9.31 Release (2023/07/10)
 	ITS#8447 - Fix cursor_put(MDB_CURRENT) on DUPSORT DB with different sized data
